Shows the score board

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     Move Car
   </title>
   <script src="./src/moveCar.js"></script>
+  <script src="./src/car.js"></script>
+  <script src="./src/road.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div id="road">
+  <div id="view" class="view">
+    <div id="road" class="road">
+    </div>
   </div>
 </body>
 
