--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
   <div id="view" class="view">
     <div id="road" class="road">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
   </div>
 </body>
